# rplidar_a3

./: CMakeLists.txt  README.md  main.cpp  test_client.py
src/: main.origin.cpp
src/Com/: DataSocket.cpp
src/LidarWrapper/: RPLidar.cpp
src/app/cdr2019/: main.cpp
tools/: client.py  measures  server.py
